# mecab-test

./: README.md  main.py  pyproject.toml  sample.html
mecab_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
